Added post jdk 8 build instructions